// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Summary tests on Web should render an ArticleSummaryContent component with a AST 1`] = `
<div
  dir="auto"
  style={
    Object {
      "WebkitBoxLines": "multiple",
      "WebkitFlexWrap": "wrap",
      "color": "rgba(105,105,105,1)",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "lineHeight": "20px",
      "marginBottom": "10px",
      "msFlexWrap": "wrap",
    }
  }
>
  <span
    dir="auto"
  >
    
    Victoria
    ...
  </span>
</div>
`;

exports[`Article Summary tests on Web should render an ArticleSummaryContent component with a blank AST 1`] = `null`;

exports[`Article Summary tests on Web should render an ArticleSummaryContent component with two paragraphs 1`] = `
<div
  dir="auto"
  style={
    Object {
      "WebkitBoxLines": "multiple",
      "WebkitFlexWrap": "wrap",
      "color": "rgba(105,105,105,1)",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "lineHeight": "20px",
      "marginBottom": "10px",
      "msFlexWrap": "wrap",
    }
  }
>
  <span
    dir="auto"
  >
    
    The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
  </span>
  <span
    dir="auto"
  >
     
    Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen.
    ...
  </span>
</div>
`;

exports[`Article Summary tests on Web should render an ArticleSummaryHeadline component with a blank AST 1`] = `
<h3
  aria-level="3"
  dir="auto"
  role="heading"
  style={
    Object {
      "fontFamily": "TimesModern-Bold",
      "fontSize": "22px",
      "fontWeight": "400",
      "lineHeight": "22px",
      "marginBottom": "5px",
    }
  }
>
  Example headline
</h3>
`;

exports[`Article Summary tests on Web should render an article-summary component containing links 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      FRANCIS ELLIOTT
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Sajid Javid to end hostile era for illegal immigrants
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      <span
        dir="auto"
      >
        Sajid Javid
      </span>
       has warned the Home Office to expect an overhaul after the 
      <span
        dir="auto"
      >
        Windrush scandal
      </span>
       as he ditches the policy of creating a “hostile
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with a single paragraph 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with content including line breaks 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      <strong>
        Victoria
      </strong>
      <br />
       ITV
      <br />
      ★★★★☆
    </span>
    <span
      dir="auto"
    >
       
      <strong>
        Lucy Worsley’s Nights at the Opera
      </strong>
      <br />
       BBC Two
      <br />
      ★★★☆☆
    </span>
    <span
      dir="auto"
    >
       
      Poor old Harriet, Duchess of Sutherland. There she was giddily expecting a
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with empty content at the end trimmed 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
    </span>
    <span
      dir="auto"
    >
       
      The former punk
    </span>
    <span
      dir="auto"
    >
       
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with headline and blank content 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with headline and no content 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </h3>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with multiple paragraphs 1`] = `
<div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
    </span>
    <span
      dir="auto"
    >
       
      Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no byline 1`] = `
<div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no date publication 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no headline 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary component with no label 1`] = `
<div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
</div>
`;

exports[`Article Summary tests on Web should render an article-summary with opinion byline 1`] = `
<div>
  <div>
    <div
      dir="auto"
      style={
        Object {
          "fontSize": "12px",
          "fontWeight": "400",
          "letterSpacing": "1.2px",
        }
      }
    >
      CAMILLA LONG
    </div>
  </div>
  <div
    dir="auto"
    style={
      Object {
        "color": "rgba(133,0,41,1)",
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
      }
    }
  >
    <a
      dir="auto"
      href="/profile/camilla-long"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="link"
    >
      Camilla Long
    </a>
    <span
      dir="auto"
    >
      , Environment Editor
    </span>
  </div>
  <h3
    aria-level="3"
    dir="auto"
    role="heading"
    style={
      Object {
        "fontFamily": "TimesModern-Bold",
        "fontSize": "22px",
        "fontWeight": "400",
        "lineHeight": "22px",
        "marginBottom": "5px",
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </h3>
  <div
    dir="auto"
    style={
      Object {
        "WebkitBoxLines": "multiple",
        "WebkitFlexWrap": "wrap",
        "color": "rgba(105,105,105,1)",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "lineHeight": "20px",
        "marginBottom": "10px",
        "msFlexWrap": "wrap",
      }
    }
  >
    <span
      dir="auto"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </span>
  </div>
  <div
    aria-label="datePublication"
    data-testid="datePublication"
    dir="auto"
    style={
      Object {
        "color": "rgba(105,105,105,1)",
        "lineHeight": "15px",
        "marginBottom": "5px",
      }
    }
  >
    Friday November 17 2017, 12:01am, The Times
  </div>
</div>
`;
